Issue #36 - Categories insertion integrated for POST /travelode/media
